<resources>
    <string name="app_name">ICETFLIXapp</string>
    <string name="e_mail">E-mail</string>
    <string name="senha">Senha</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="j_tem_uma_conta">Já tem uma conta?</string>
    <string name="confirmar_senha">Confirmar senha</string>
    <string name="recuperar_a_senha">recuperar a senha?</string>
    <string name="entrar">Entrar</string>
    <string name="registre_se">Registre-se</string>
    <string name="conecte_se">Conecte-se</string>
    <string name="conta_criada">Conta criada com sucesso</string>
    <string name="enviar">Enviar</string>
    <string name="n_o_tem_uma_conta">Não tem uma conta?</string>
    <string name="button">Button</string>
    <string name="entre_com">Entre com</string>
    <string name="ja_tem_uma_conta">Já tem uma conta?</string>
    <string name="ola">Olá!</string>
    <string name="vamos_comecar">Vamos Começar</string>
    <string name="esqueceu_sua_senha">Esqueceu sua senha?</string>
    <string name="por_favor_insira_seu_email_cadastrado_na_plataforma_que_enviaremos_um_link_para_o_mesmo_com_as_instru_es_para_restaura_o_de_sua_senha">Por favor insira seu email cadastrado na plataforma que enviaremos um link para o mesmo com as instruções para restauração de sua senha</string>
    <string name="seu_pedido_de_recupera_o_foi_feito_com_sucesso">Seu pedido de recuperação foi feito com sucesso!</string>
    <string name="enviamos_um_email_de_recupera_o_para_seu_email">Enviamos um email de recuperação para seu email.</string>
    <string name="cast">Elenco: %1$s</string>
    <string name="similar">Opções Semelhantes</string>

    <string name="client_id">785810862708-qmv53adli814k8icul48pkf082cuiqp9.apps.googleusercontent.com</string>

</resources>