<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".SingUpActivity">


    <ImageView
        android:id="@+id/vetor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="104dp"
        android:src="@drawable/vetor_singup"
        app:layout_constraintBottom_toTopOf="@+id/input_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txt_conectar_conta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/conecte_se"
        android:textAlignment="center"
        android:textColor="@color/green"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/btn_cadastrar"
        app:layout_constraintHorizontal_bias="0.746"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_cadastrar" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cadastrar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/bg_button"
        android:text="@string/cadastrar"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_confirmar_senha" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/input_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="368dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/bg_input_text"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:textColor="@color/white"
        android:textColorHint="@color/txt_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/vamos_comecar"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/input_confirmar_senha"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/bg_input_text"
        android:hint="@string/confirmar_senha"
        android:inputType="textPassword"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:textColor="@color/white"
        android:textColorHint="@color/txt_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_senha" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/input_senha"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/bg_input_text"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:textColor="@color/white"
        android:textColorHint="@color/txt_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_email" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="4dp"
        android:text="@string/ja_tem_uma_conta"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/txt_conectar_conta"
        app:layout_constraintHorizontal_bias="0.937"
        app:layout_constraintStart_toStartOf="@+id/btn_cadastrar"
        app:layout_constraintTop_toBottomOf="@+id/btn_cadastrar" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/ola"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vetor" />


</androidx.constraintlayout.widget.ConstraintLayout>